# polymarket-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
polymarket_cli/: __init__.py  analyzer.py  api.py  main.py  paper_trader.py  scanner.py
