[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-cli"
version = "0.1.0"
description = "Terminal-native toolkit for Polymarket prediction markets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Clawson", email = "sirclawson@gmail.com"}]
keywords = ["polymarket", "prediction-markets", "trading", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
news = ["feedparser>=6.0"]

[project.scripts]
polymarket = "polymarket_cli.main:main"

[project.urls]
Homepage = "https://github.com/sirclawson/polymarket-cli"
Issues = "https://github.com/sirclawson/polymarket-cli/issues"
